D/attic/stderr
c:\Users\Acer\codeforces\Codeforces - Codeforces Round #640 (Div. 4)\D. Alice, Bob and Candies\sol.cpp:48:2: error: stray '\314' in program
 }̥
  ^
c:\Users\Acer\codeforces\Codeforces - Codeforces Round #640 (Div. 4)\D. Alice, Bob and Candies\sol.cpp:48:3: error: stray '\245' in program
 }̥
   ^
